# MindSeaViz

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  start.bat
backend/: main.py
backend/api/: chat.py  config.py  dependencies.py  graph.py  notes.py  stats.py
backend/core/: config.py  indexer.py
backend/core/db/: lancedb.py  sqlite.py
backend/core/parser/: markdown.py  splitter.py
backend/core/search/: whoosh.py
backend/core/vault/: reader.py  watcher.py
backend/models/: entities.py  schemas.py
backend/services/: graph.py  stats.py
backend/services/chat/: agent.py  session.py
backend/services/search/: hybrid.py
docs/: file-structure.md
docs/superpowers/specs/: 2026-05-17-mindsea-viz-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/ChatPanel/: ChatInput.tsx  ChatMessages.tsx  ChatPanel.tsx  GraphOverlay.tsx  SessionList.tsx
frontend/src/components/Dashboard/: OrphanList.tsx  RecentNotes.tsx  StatsCards.tsx  TagCloud.tsx
frontend/src/components/GraphView/: GraphCanvas.tsx
frontend/src/components/Layout/: Sidebar.tsx
frontend/src/components/Settings/: SettingsPanel.tsx
frontend/src/lib/: graph-renderer.ts
frontend/src/stores/: index.ts
