[project]
name = "mindseaviz"
version = "0.1.0"
description = "Visual knowledge base assistant for MindSea Obsidian vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-frontmatter>=1.0",
    "whoosh>=2.7",
    "lancedb>=0.15.0",
    "networkx>=3.0",
    "watchdog>=4.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
embedding = [
    "sentence-transformers>=3.0",
    "optimum[onnxruntime]>=1.20",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
